<resources>
    <string name="app_name">To Do List</string>
    <string name="loading">Loading</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="title_activity_add_">Add_Activity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="add_activity_time">Time</string>
    <string name="add_activity_location">Location</string>
    <string name="add_activity_content">Note</string>
    <string name="empty_string"></string>
    <string name="holder_tag">holderTag</string>
    <string name="id_tag">idTag</string>
    <string name="add_activity_delete">DELETE</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
