<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.todolist.AddActivity"
    android:orientation="vertical">

    <EditText android:id="@+id/activity_add_time"
        android:text="@string/empty_string"
        android:hint="@string/add_activity_time" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"/>
    <EditText android:id="@+id/activity_add_location"
        android:text="@string/empty_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:hint="@string/add_activity_location"/>
    <EditText android:id="@+id/activity_add_content"
        android:text="@string/empty_string"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/add_activity_content"
        android:gravity="top|left"/>
    <Button android:id="@+id/activity_add_delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:text="@string/add_activity_delete"
        android:background="#FF1744"
        android:onClick="deleteReminder"/>
</LinearLayout>


